--- a/front/package.json
+++ b/front/package.json
@@ -14,15 +14,21 @@
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@xstate/react": "^1.2.2",
     "material-ui-color-picker": "^3.5.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xstate": "^4.15.4"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "PORT=3001 PUBLIC_URL=/ react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -47,6 +53,8 @@
   },
   "devDependencies": {
     "@iconify-icons/mdi": "^1.1.2",
-    "@iconify/react": "^1.1.3"
+    "@iconify/react": "^1.1.3",
+    "@types/prop-types": "^15.7.3",
+    "react-router-dom": "^5.2.0"
   }
 }
