--- a/front/package.json
+++ b/front/package.json
@@ -55,6 +55,7 @@
     "@iconify-icons/mdi": "^1.1.2",
     "@iconify/react": "^1.1.3",
     "@types/prop-types": "^15.7.3",
+    "@xstate/inspect": "^0.4.1",
     "react-router-dom": "^5.2.0"
   }
 }
