--- a/back/nodejs/package.json
+++ b/back/nodejs/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/ioredis": "^4.17.11",
+    "@types/socket.io": "^2.1.12",
     "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "ioredis": "^4.19.4",
+    "nanoid": "^3.1.20",
     "redis": "^3.0.2",
     "socket.io": "^3.0.5"
   }
