added fsm implementation for raft leader election

--- a/back/nodejs/package.json
+++ b/back/nodejs/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^4.19.4",
     "nanoid": "^3.1.20",
     "redis": "^3.0.2",
-    "socket.io": "^3.0.5"
+    "socket.io": "^3.0.5",
+    "xstate": "^4.16.0"
   }
 }
