--- a/back/nodejs/package.json
+++ b/back/nodejs/package.json
@@ -19,5 +19,8 @@
     "redis": "^3.0.2",
     "socket.io": "^3.0.5",
     "xstate": "^4.16.0"
+  },
+  "devDependencies": {
+    "chalk": "^4.1.0"
   }
 }
