--- a/back/nodejs/package.json
+++ b/back/nodejs/package.json
@@ -18,6 +18,7 @@
     "nanoid": "^3.1.20",
     "redis": "^3.0.2",
     "socket.io": "^3.0.5",
+    "unique-names-generator": "^4.3.1",
     "xstate": "^4.16.0"
   },
   "devDependencies": {
