--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "material-ui-color-picker": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "socket.io-client": "^3.0.5",
@@ -31,7 +32,9 @@
     "start": "PORT=3001 PUBLIC_URL=/ react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +57,12 @@
   "devDependencies": {
     "@iconify-icons/mdi": "^1.1.2",
     "@iconify/react": "^1.1.3",
+    "@storybook/addon-actions": "^6.1.17",
+    "@storybook/addon-essentials": "^6.1.17",
+    "@storybook/addon-links": "^6.1.17",
+    "@storybook/node-logger": "^6.1.17",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.17",
     "@types/prop-types": "^15.7.3",
     "@xstate/inspect": "^0.4.1",
     "react-router-dom": "^5.2.0"
