--- a/front/package.json
+++ b/front/package.json
@@ -31,9 +31,7 @@
     "start": "PORT=3001 PUBLIC_URL=/ react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -56,12 +54,6 @@
   "devDependencies": {
     "@iconify-icons/mdi": "^1.1.2",
     "@iconify/react": "^1.1.3",
-    "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-essentials": "^6.1.17",
-    "@storybook/addon-links": "^6.1.17",
-    "@storybook/node-logger": "^6.1.17",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.17",
     "@types/prop-types": "^15.7.3",
     "@xstate/inspect": "^0.4.1",
     "react-router-dom": "^5.2.0"
