--- a/back/nodejs/package.json
+++ b/back/nodejs/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/ioredis": "^4.17.11",
     "@types/socket.io": "^2.1.12",
+    "body-parser": "^1.19.0",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "ioredis": "^4.19.4",
