--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.9",
     "@types/react-router-dom": "^5.1.6",
@@ -25,6 +26,11 @@
     "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
     "xstate": "^4.15.4"
   },
   "scripts": {
@@ -41,7 +47,7 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">10%",
       "not dead",
       "not op_mini all"
     ],
@@ -55,7 +61,6 @@
     "@iconify-icons/mdi": "^1.1.2",
     "@iconify/react": "^1.1.3",
     "@types/prop-types": "^15.7.3",
-    "@xstate/inspect": "^0.4.1",
-    "react-router-dom": "^5.2.0"
+    "@xstate/inspect": "^0.4.1"
   }
 }
