--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,7 @@
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.0",
     "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
